filegroup(
    name = "static_files",
    srcs = [
        "BUILD.bazel",
        "expand_template.bzl",
        "extract_js_module_output.bzl",
        "extract_types.bzl",
        "@npm//@angular/dev-infra-private/bazel/api-golden:files",
        "@npm//@angular/dev-infra-private/bazel/benchmark:files",
        "@npm//@angular/dev-infra-private/bazel/browsers:files",
        "@npm//@angular/dev-infra-private/bazel/constraints:files",
        "@npm//@angular/dev-infra-private/bazel/esbuild:files",
        "@npm//@angular/dev-infra-private/bazel/http-server:files",
        "@npm//@angular/dev-infra-private/bazel/integration:files",
        "@npm//@angular/dev-infra-private/bazel/karma:files",
        "@npm//@angular/dev-infra-private/bazel/map-size-tracking:files",
        "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
        "@npm//@angular/dev-infra-private/bazel/spec-bundling:files",
    ],
    visibility = ["//:npm"],
)
