package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm_angular_dev_infra_private//benchmark/brotli-cli:files",
        "@npm_angular_dev_infra_private//browsers:files",
        "@npm_angular_dev_infra_private//benchmark/component_benchmark:files",
        "@npm_angular_dev_infra_private//benchmark/ng_rollup_bundle:files",
    ],
)
