package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm//@angular/dev-infra-private/benchmark/brotli-cli:files",
        "@npm//@angular/dev-infra-private/benchmark/component_benchmark:files",
        "@npm//@angular/dev-infra-private/benchmark/ng_rollup_bundle:files",
    ],
)
