package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm_dev_infra//benchmark/brotli-cli:files",
        "@npm_dev_infra//benchmark/browsers:files",
        "@npm_dev_infra//benchmark/component_benchmark:files",
        "@npm_dev_infra//benchmark/ng_rollup_bundle:files",
    ],
)
