package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm_angular_dev_infra_private//browsers/chromium:files",
        "@npm_angular_dev_infra_private//browsers/firefox:files",
    ],
)
