package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm//@angular/dev-infra-private/browsers/chromium:files",
        "@npm//@angular/dev-infra-private/browsers/firefox:files",
    ],
)
