package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "@npm//@angular/dev-infra-private/bazel/benchmark/app_bundling:files",
        "@npm//@angular/dev-infra-private/bazel/benchmark/brotli-cli:files",
        "@npm//@angular/dev-infra-private/bazel/benchmark/component_benchmark:files",
        "@npm//@angular/dev-infra-private/bazel/benchmark/driver-utilities:files",
    ],
)
